--- a/UserPage.css
+++ b/UserPage.css
@@ -1,11 +1,35 @@
 body {
-    background-image: url('background1.jpg');
+    background: url('background1.jpg') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 div.headerBand {
     background-image:url('background14.jpg'); 
     width: 100%; 
     max-height: 100px;
     text-align: right;
+}
+
+.post {
+    background-color: #F0F8FF;
+    width: 40%;
+    margin-left: 15px;
+    margin-top: 10px;
+    padding-left: 10px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+}
+
+.Notification {
+	float: right;
+	background-color: #92a8d1;
+    padding-left: 20px;
+    padding-right: 20px;
+    font-size: 15px;
+    font-family: Arial;
+
 }
 
 #BasicButton {
