--- a/AdminPage.css
+++ b/AdminPage.css
@@ -1,5 +1,9 @@
 body {
-    background-image: url('background1.jpg');
+    background-image: url('background1.jpg')no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;;
 }
 div.headerBand {
     background-image:url('background14.jpg'); 
